// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`compile functions function lazy arguments pass a range as lazy range argument --> arg is encapsulated with zone 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = (zone) => {
	return range(zone, deps[0]);
}
return computeFunctions[0](ctx,fullZone,_1); // ACCEPT_LAZY_RANGE_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a range as lazy range argument --> arg is encapsulated with zone 2`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _2 = (zone) => {
	const _1 = this.literalValues.numbers[0];
	return computeFunctions[0](ctx,zone,_1); // ACCEPT_SCALAR_RETURN_RANGE;
}
return computeFunctions[1](ctx,fullZone,_2); // ACCEPT_LAZY_RANGE_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a range as lazy range argument --> arg is encapsulated with zone 3`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _2 = (zone) => {
	const _1 = range(fullZone, deps[0]);
	return computeFunctions[0](ctx,zone,_1); // ACCEPT_RANGE_RETURN_RANGE;
}
return computeFunctions[1](ctx,fullZone,_2); // ACCEPT_LAZY_RANGE_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a range as lazy scalar argument (vectorization) --> arg is encapsulated with zone 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = () => {
	return range(zone, deps[0]);
}
return computeFunctions[0](ctx,fullZone,_1); // VECTORIZE ACCEPT_LAZY_SCALAR_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a range as lazy scalar argument (vectorization) --> arg is encapsulated with zone 2`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _2 = () => {
	const _1 = this.literalValues.numbers[0];
	return computeFunctions[0](ctx,zone,_1); // ACCEPT_SCALAR_RETURN_RANGE;
}
return computeFunctions[1](ctx,fullZone,_2); // VECTORIZE ACCEPT_LAZY_SCALAR_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a range as lazy scalar argument (vectorization) --> arg is encapsulated with zone 3`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _2 = () => {
	const _1 = range(fullZone, deps[0]);
	return computeFunctions[0](ctx,zone,_1); // ACCEPT_RANGE_RETURN_RANGE;
}
return computeFunctions[1](ctx,fullZone,_2); // VECTORIZE ACCEPT_LAZY_SCALAR_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a range as range argument --> arg is not encapsulated 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
return computeFunctions[0](ctx,_1); // ACCEPT_RANGE_RETURN_SCALAR;
}"
`;

exports[`compile functions function lazy arguments pass a range as range argument --> arg is not encapsulated 2`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = computeFunctions[0](ctx,fullZone,_1); // ACCEPT_SCALAR_RETURN_RANGE;
return computeFunctions[1](ctx,_2); // ACCEPT_RANGE_RETURN_SCALAR;
}"
`;

exports[`compile functions function lazy arguments pass a range as range argument --> arg is not encapsulated 3`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
const _2 = computeFunctions[0](ctx,fullZone,_1); // ACCEPT_RANGE_RETURN_RANGE;
return computeFunctions[1](ctx,_2); // ACCEPT_RANGE_RETURN_SCALAR;
}"
`;

exports[`compile functions function lazy arguments pass a range as range argument --> arg is not encapsulated 4`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
return computeFunctions[0](ctx,fullZone,_1); // ACCEPT_RANGE_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a range as range argument --> arg is not encapsulated 5`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = computeFunctions[0](ctx,fullZone,_1); // ACCEPT_SCALAR_RETURN_RANGE;
return computeFunctions[1](ctx,fullZone,_2); // ACCEPT_RANGE_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a range as range argument --> arg is not encapsulated 6`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
const _2 = computeFunctions[0](ctx,fullZone,_1); // ACCEPT_RANGE_RETURN_RANGE;
return computeFunctions[1](ctx,fullZone,_2); // ACCEPT_RANGE_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a range as scalar argument (VECTORIZATION) --> arg is not encapsulated 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
return computeFunctions[0](ctx,fullZone,_1); // VECTORIZE ACCEPT_SCALAR_RETURN_SCALAR;
}"
`;

exports[`compile functions function lazy arguments pass a range as scalar argument (VECTORIZATION) --> arg is not encapsulated 2`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = computeFunctions[0](ctx,fullZone,_1); // ACCEPT_SCALAR_RETURN_RANGE;
return computeFunctions[1](ctx,fullZone,_2); // VECTORIZE ACCEPT_SCALAR_RETURN_SCALAR;
}"
`;

exports[`compile functions function lazy arguments pass a range as scalar argument (VECTORIZATION) --> arg is not encapsulated 3`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
const _2 = computeFunctions[0](ctx,fullZone,_1); // ACCEPT_RANGE_RETURN_RANGE;
return computeFunctions[1](ctx,fullZone,_2); // VECTORIZE ACCEPT_SCALAR_RETURN_SCALAR;
}"
`;

exports[`compile functions function lazy arguments pass a range as scalar argument (VECTORIZATION) --> arg is not encapsulated 4`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
return computeFunctions[0](ctx,fullZone,_1); // VECTORIZE ACCEPT_SCALAR_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a range as scalar argument (VECTORIZATION) --> arg is not encapsulated 5`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = computeFunctions[0](ctx,fullZone,_1); // ACCEPT_SCALAR_RETURN_RANGE;
return computeFunctions[1](ctx,fullZone,_2); // VECTORIZE ACCEPT_SCALAR_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a range as scalar argument (VECTORIZATION) --> arg is not encapsulated 6`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
const _2 = computeFunctions[0](ctx,fullZone,_1); // ACCEPT_RANGE_RETURN_RANGE;
return computeFunctions[1](ctx,fullZone,_2); // VECTORIZE ACCEPT_SCALAR_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as lazy range argument --> arg is encapsulated with zone 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = (zone) => {
	return this.literalValues.numbers[0];
}
return computeFunctions[0](ctx,fullZone,_1); // ACCEPT_LAZY_RANGE_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as lazy range argument --> arg is encapsulated with zone 2`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _2 = (zone) => {
	const _1 = this.literalValues.numbers[0];
	return computeFunctions[0](ctx,_1); // ACCEPT_SCALAR_RETURN_SCALAR;
}
return computeFunctions[1](ctx,fullZone,_2); // ACCEPT_LAZY_RANGE_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as lazy range argument --> arg is encapsulated with zone 3`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _2 = (zone) => {
	const _1 = range(fullZone, deps[0]);
	return computeFunctions[0](ctx,_1); // ACCEPT_RANGE_RETURN_SCALAR;
}
return computeFunctions[1](ctx,fullZone,_2); // ACCEPT_LAZY_RANGE_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as lazy scalar argument --> arg is encapsulated without zone 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = () => {
	return this.literalValues.numbers[0];
}
return computeFunctions[0](ctx,fullZone,_1); // ACCEPT_LAZY_SCALAR_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as lazy scalar argument --> arg is encapsulated without zone 2`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _2 = () => {
	const _1 = this.literalValues.numbers[0];
	return computeFunctions[0](ctx,_1); // ACCEPT_SCALAR_RETURN_SCALAR;
}
return computeFunctions[1](ctx,fullZone,_2); // ACCEPT_LAZY_SCALAR_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as lazy scalar argument --> arg is encapsulated without zone 3`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _2 = () => {
	const _1 = range(fullZone, deps[0]);
	return computeFunctions[0](ctx,_1); // ACCEPT_RANGE_RETURN_SCALAR;
}
return computeFunctions[1](ctx,fullZone,_2); // ACCEPT_LAZY_SCALAR_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as range argument --> arg is not encapsulated 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
return computeFunctions[0](ctx,_1); // ACCEPT_RANGE_RETURN_SCALAR;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as range argument --> arg is not encapsulated 2`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = computeFunctions[0](ctx,_1); // ACCEPT_SCALAR_RETURN_SCALAR;
return computeFunctions[1](ctx,_2); // ACCEPT_RANGE_RETURN_SCALAR;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as range argument --> arg is not encapsulated 3`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
const _2 = computeFunctions[0](ctx,_1); // ACCEPT_RANGE_RETURN_SCALAR;
return computeFunctions[1](ctx,_2); // ACCEPT_RANGE_RETURN_SCALAR;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as range argument --> arg is not encapsulated 4`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
return computeFunctions[0](ctx,fullZone,_1); // ACCEPT_RANGE_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as range argument --> arg is not encapsulated 5`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = computeFunctions[0](ctx,_1); // ACCEPT_RANGE_RETURN_SCALAR;
return computeFunctions[1](ctx,fullZone,_2); // ACCEPT_RANGE_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as range argument --> arg is not encapsulated 6`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
const _2 = computeFunctions[0](ctx,fullZone,_1); // ACCEPT_RANGE_RETURN_RANGE;
return computeFunctions[1](ctx,fullZone,_2); // ACCEPT_RANGE_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as scalar argument --> arg is not encapsulated 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = ref(deps[0]);
return computeFunctions[0](ctx,_1); // ACCEPT_SCALAR_RETURN_SCALAR;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as scalar argument --> arg is not encapsulated 2`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = computeFunctions[0](ctx,_1); // ACCEPT_SCALAR_RETURN_SCALAR;
return computeFunctions[1](ctx,_2); // ACCEPT_SCALAR_RETURN_SCALAR;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as scalar argument --> arg is not encapsulated 3`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
const _2 = computeFunctions[0](ctx,_1); // ACCEPT_RANGE_RETURN_SCALAR;
return computeFunctions[1](ctx,_2); // ACCEPT_SCALAR_RETURN_SCALAR;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as scalar argument --> arg is not encapsulated 4`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
return computeFunctions[0](ctx,fullZone,_1); // ACCEPT_SCALAR_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as scalar argument --> arg is not encapsulated 5`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = computeFunctions[0](ctx,_1); // ACCEPT_SCALAR_RETURN_SCALAR;
return computeFunctions[1](ctx,fullZone,_2); // ACCEPT_SCALAR_RETURN_RANGE;
}"
`;

exports[`compile functions function lazy arguments pass a scalar as scalar argument --> arg is not encapsulated 6`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
const _2 = computeFunctions[0](ctx,_1); // ACCEPT_RANGE_RETURN_SCALAR;
return computeFunctions[1](ctx,fullZone,_2); // ACCEPT_SCALAR_RETURN_RANGE;
}"
`;

exports[`compile functions same symbol twice 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = getSymbolValue(fullZone, this.symbols[0], false);
const _2 = getSymbolValue(fullZone, this.symbols[0], false);
return computeFunctions[0](ctx,fullZone,_1,_2); // VECTORIZE ADD;
}"
`;

exports[`compile functions simple in a function 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = getSymbolValue(fullZone, this.symbols[1], true);
return computeFunctions[0](ctx,_1); // SUM;
}"
`;

exports[`compile functions simple symbol 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
return getSymbolValue(fullZone, this.symbols[0], false);
}"
`;

exports[`compile functions symbol with optional single quotes 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
return getSymbolValue(fullZone, this.symbols[0], false);
}"
`;

exports[`compile functions symbol with space and with single quotes 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
return getSymbolValue(fullZone, this.symbols[0], false);
}"
`;

exports[`compile functions two different symbols 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = getSymbolValue(fullZone, this.symbols[0], false);
const _2 = getSymbolValue(fullZone, this.symbols[1], false);
return computeFunctions[0](ctx,fullZone,_1,_2); // VECTORIZE ADD;
}"
`;

exports[`expression compiler array literal expression 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = this.literalValues.numbers[1];
const _5 = computeFunctions[0](ctx,fullZone,_1,_2); // ARRAY.ROW;
const _3 = this.literalValues.numbers[2];
const _4 = this.literalValues.numbers[3];
const _6 = computeFunctions[1](ctx,fullZone,_3,_4); // ARRAY.ROW;
return computeFunctions[2](ctx,fullZone,_5,_6); // ARRAY.LITERAL;
}"
`;

exports[`expression compiler array literal expression with one column only 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _5 = computeFunctions[0](ctx,fullZone,_1); // ARRAY.ROW;
const _2 = this.literalValues.numbers[1];
const _6 = computeFunctions[1](ctx,fullZone,_2); // ARRAY.ROW;
const _3 = this.literalValues.numbers[2];
const _7 = computeFunctions[2](ctx,fullZone,_3); // ARRAY.ROW;
const _4 = this.literalValues.numbers[3];
const _8 = computeFunctions[3](ctx,fullZone,_4); // ARRAY.ROW;
return computeFunctions[4](ctx,fullZone,_5,_6,_7,_8); // ARRAY.LITERAL;
}"
`;

exports[`expression compiler array literal expression with one row only 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = this.literalValues.numbers[1];
const _3 = this.literalValues.numbers[2];
const _4 = this.literalValues.numbers[3];
const _5 = computeFunctions[0](ctx,fullZone,_1,_2,_3,_4); // ARRAY.ROW;
return computeFunctions[1](ctx,fullZone,_5); // ARRAY.LITERAL;
}"
`;

exports[`expression compiler cells are converted to ranges if function require a range 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
return computeFunctions[0](ctx,_1); // SUM;
}"
`;

exports[`expression compiler expression with $ref 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = ref(deps[0]);
const _2 = ref(deps[1]);
const _3 = computeFunctions[0](ctx,_1,_2); // ADD;
const _4 = ref(deps[2]);
return computeFunctions[1](ctx,_3,_4); // ADD;
}"
`;

exports[`expression compiler expression with cell# 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
return computeFunctions[0](ctx,fullZone,_1); // SPILLED.RANGE;
}"
`;

exports[`expression compiler expression with range# 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
return computeFunctions[0](ctx,fullZone,_1); // SPILLED.RANGE;
}"
`;

exports[`expression compiler expression with references with a sheet 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
return ref(deps[0]);
}"
`;

exports[`expression compiler expressions with a debugger 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
debugger;
ctx["debug"] = true;
const _1 = ref(deps[0]);
const _2 = this.literalValues.numbers[0];
return computeFunctions[0](ctx,_1,_2); // DIVIDE;
}"
`;

exports[`expression compiler read some values and functions 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _2 = ref(deps[0]);
const _1 = range(fullZone, deps[1]);
const _3 = computeFunctions[0](ctx,_1); // SUM;
return computeFunctions[1](ctx,_2,_3); // ADD;
}"
`;

exports[`expression compiler some arithmetic expressions 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
return this.literalValues.numbers[0];
}"
`;

exports[`expression compiler some arithmetic expressions 2`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
return { value: true };
}"
`;

exports[`expression compiler some arithmetic expressions 3`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
return this.literalValues.strings[0];
}"
`;

exports[`expression compiler some arithmetic expressions 4`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = this.literalValues.numbers[1];
return computeFunctions[0](ctx,_1,_2); // ADD;
}"
`;

exports[`expression compiler some arithmetic expressions 5`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = this.literalValues.numbers[1];
return computeFunctions[0](ctx,_1,_2); // MULTIPLY;
}"
`;

exports[`expression compiler some arithmetic expressions 6`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = this.literalValues.numbers[1];
return computeFunctions[0](ctx,_1,_2); // MINUS;
}"
`;

exports[`expression compiler some arithmetic expressions 7`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = this.literalValues.numbers[1];
return computeFunctions[0](ctx,_1,_2); // DIVIDE;
}"
`;

exports[`expression compiler some arithmetic expressions 8`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
return computeFunctions[0](ctx,_1); // UMINUS;
}"
`;

exports[`expression compiler some arithmetic expressions 9`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = this.literalValues.numbers[1];
const _6 = computeFunctions[0](ctx,_1,_2); // ADD;
const _3 = this.literalValues.numbers[2];
const _4 = computeFunctions[1](ctx,_3); // UMINUS;
const _5 = this.literalValues.numbers[3];
const _7 = computeFunctions[2](ctx,_4,_5); // ADD;
return computeFunctions[3](ctx,_6,_7); // MULTIPLY;
}"
`;

exports[`expression compiler some arithmetic expressions 10`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = this.literalValues.numbers[1];
return computeFunctions[0](ctx,_1,_2); // SUM;
}"
`;

exports[`expression compiler some arithmetic expressions 11`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = { value: true };
const _2 = this.literalValues.strings[0];
return computeFunctions[0](ctx,_1,_2); // SUM;
}"
`;

exports[`expression compiler some arithmetic expressions 12`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = undefined;
const _3 = this.literalValues.numbers[1];
return computeFunctions[0](ctx,_1,_2,_3); // SUM;
}"
`;

exports[`expression compiler some arithmetic expressions 13`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
return computeFunctions[0](ctx,_1); // UNARY.PERCENT;
}"
`;

exports[`expression compiler some arithmetic expressions 14`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = this.literalValues.numbers[0];
const _2 = this.literalValues.numbers[1];
const _3 = computeFunctions[0](ctx,_1,_2); // ADD;
return computeFunctions[1](ctx,_3); // UNARY.PERCENT;
}"
`;

exports[`expression compiler some arithmetic expressions 15`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = ref(deps[0]);
return computeFunctions[0](ctx,_1); // UNARY.PERCENT;
}"
`;

exports[`expression compiler with the same reference multiple times 1`] = `
"function anonymous(deps,ref,range,getSymbolValue,ctx,computeFunctions
) {
const fullZone = {top: 0, left: 0, bottom: undefined, right: undefined};
const _1 = range(fullZone, deps[0]);
const _2 = range(fullZone, deps[1]);
const _3 = range(fullZone, deps[2]);
return computeFunctions[0](ctx,_1,_2,_3); // SUM;
}"
`;
